remove all project data
go take out of GIT (errors)

--- a/Project 3 - Custom Environment.ipynb
+++ b/Project 3 - Custom Environment.ipynb
@@ -18,16 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import GYM Stuff\n",
     "import gym \n",
     "from gym import Env\n",
     "from gym.spaces import Discrete, Box, Dict, Tuple, MultiBinary, MultiDiscrete \n",
+    "\n",
+    "# Import helpers\n",
     "import numpy as np\n",
     "import random\n",
     "import os\n",
+    "\n",
+    "# Import stable baselines stuff\n",
     "from stable_baselines3 import PPO\n",
     "from stable_baselines3.common.vec_env import VecFrameStack\n",
     "from stable_baselines3.common.evaluation import evaluate_policy"
@@ -42,27 +47,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Discrete(3)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Discrete(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Box(0,1,shape=(3,3)).sample()"
+    "#checkout values of discrete space\n",
+    "Discrete(3).sample()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5233074 , 0.13598032, 0.18512304],\n",
+       "       [0.55914867, 0.13997307, 0.86718714],\n",
+       "       [0.5761255 , 0.46295476, 0.5366729 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Box(0,1,shape=(3,3)).sample()\n",
+    "\n",
+    "#Box(0,1,shape=(3,).sample() # if only 3 values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 53, 134,  13],\n",
+       "       [192, 239,  43],\n",
+       "       [204,  43, 157]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Box(0,255,shape=(3,3), dtype=int).sample()"
    ]
@@ -314,9 +379,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rlcourse",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
-   "name": "rlcourse"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +393,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "913831768da4047a2e37deb59627c76854514afe5c4e022f240264e693999d73"
+   }
   }
  },
  "nbformat": 4,
