--- a/Project 1-Breakout.ipynb
+++ b/Project 1-Breakout.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\PeterMeyerDr\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\PeterMeyerDr\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
-      "c:\\Users\\PeterMeyerDr\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "c:\\Users\\PeterMeyerDr\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gym \n",
     "from stable_baselines3 import A2C\n",
@@ -34,21 +22,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not open requirements file: [Errno 2] No such file or directory: 'pytorch'\n"
-     ]
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# GPU acceleration\n",
-    "!pip install conda install pytorch torchvision torchaudio cudatoolkit=11.6 -c pytorch -c conda-forge"
+    "# GPU acceleration Installation   https://pytorch.org/get-started/locally/ \n",
+    "#!conda install pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch\n",
+    "# !pip install conda install pytorch torchvision torchaudio cudatoolkit=11.6 -c pytorch -c conda-forge #would be newer version, but does not work"
    ]
   },
   {
@@ -60,7 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 011022 - stop with doing - just following video - see oneNote - atari-Py is fully deprecated\n",
+    "# \n",
+    "# \n",
+    "#  download files for atari in browser\n",
+    "#!http://www.atarimania.com/roms/Roms.rar\n",
+    "\n",
+    "\n",
+    "#install it\n",
+    "#!python -m atari_py.import_roms .Roms\\ROMS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,29 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\PeterMeyerDr\\anaconda3\\lib\\site-packages\\gym\\envs\\atari\\environment.py:267: UserWarning: \u001b[33mWARN: We strongly suggest supplying `render_mode` when constructing your environment, e.g., gym.make(ID, render_mode='human'). Using `render_mode` provides access to proper scaling, audio support, and proper framerates.\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode:1 Score:0.0\n",
-      "Episode:2 Score:2.0\n",
-      "Episode:3 Score:0.0\n",
-      "Episode:4 Score:1.0\n",
-      "Episode:5 Score:5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "episodes = 5\n",
     "for episode in range(1, episodes+1):\n",
@@ -119,90 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.action_space.sample()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[169,  79,  61],\n",
-       "        [123,  85,  14],\n",
-       "        [125,  87,  60],\n",
-       "        ...,\n",
-       "        [142, 218, 157],\n",
-       "        [103, 192,  17],\n",
-       "        [ 70,  42, 150]],\n",
-       "\n",
-       "       [[224, 231,  49],\n",
-       "        [140, 141, 221],\n",
-       "        [  5,   6, 230],\n",
-       "        ...,\n",
-       "        [ 28, 205, 130],\n",
-       "        [ 85, 154, 204],\n",
-       "        [119,  15,  13]],\n",
-       "\n",
-       "       [[165, 115,  80],\n",
-       "        [170, 230,  95],\n",
-       "        [ 81, 163,  55],\n",
-       "        ...,\n",
-       "        [134,  82, 238],\n",
-       "        [100, 130, 129],\n",
-       "        [241, 145, 190]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[250, 160, 240],\n",
-       "        [181,  97, 102],\n",
-       "        [174, 160, 239],\n",
-       "        ...,\n",
-       "        [168, 137, 104],\n",
-       "        [ 29,  65, 252],\n",
-       "        [ 57,  84, 179]],\n",
-       "\n",
-       "       [[187, 200, 134],\n",
-       "        [ 24, 192,  53],\n",
-       "        [ 99, 104, 173],\n",
-       "        ...,\n",
-       "        [148, 156, 203],\n",
-       "        [ 23, 167,  32],\n",
-       "        [159, 253, 199]],\n",
-       "\n",
-       "       [[ 96, 199, 118],\n",
-       "        [109,  48, 150],\n",
-       "        [ 48, 241,  51],\n",
-       "        ...,\n",
-       "        [ 58, 233,  77],\n",
-       "        [122, 136, 212],\n",
-       "        [ 74, 102, 108]]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.observation_space.sample()"
    ]
